--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mesto",
+  "name": "mesto-main",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -10,21 +10,21 @@
   "author": "Vlad Rastyagaev",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "autoprefixer": "^10.2.4",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.2",
+    "css-loader": "^5.2.0",
     "cssnano": "^4.1.10",
-    "html-webpack-plugin": "^5.0.0",
-    "mini-css-extract-plugin": "^1.3.6",
-    "postcss-loader": "^5.0.0",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.4.0",
+    "postcss-loader": "^5.2.0",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "core-js": "^3.8.3"
+    "core-js": "^3.9.1"
   }
 }
